test/corpus/options.txt
================
Options contract
================

BUY  1 CRWD 2024-07-19 380 PUT  TO_OPEN
SELL 1 CRWD 2024-07-19 390 CALL TO_CLOSE
---

(source_file
    (options_leg
        (side (buy))
        (number)
        (underlying)
        (expiration)
        (number)
        (right)
        (open_or_close))

    (options_leg
        (side (sell))
        (number)
        (underlying)
        (expiration)
        (number)
        (right)
        (open_or_close)))
